namespace ScholarPath.Domain.Enums;

public enum UserRole
{
    Student = 0,
    Consultant = 1,
    Company = 2,
    Admin = 3
}
